--- a/www/index.html
+++ b/www/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <script type="text/javascript" src="cordova.js"></script>
+		<p> This is a change </p>
     </body>
 </html>
